# portal-ng-bff

./: .gitignore  .gitreview  .pre-commit-config.yaml  Dockerfile  INFO.yaml  README.md  action.yaml  build.gradle  convert.py  groups  project.config  pyproject.toml  settings.gradle  sitecustomize.py  spotbugs-exclude.xml  version.properties
.github/: dependabot.yml
.github/actions/gerrit-issue-id-action/: action.yaml
.github/workflows/: build-test-release.yaml  build-test.yaml  call-github2gerrit.yaml  gerrit-verify.yaml  github2gerrit-python.yaml  github2gerrit.yaml  issue-id.yaml  testing.yaml
.ssh-g2g/: known_hosts
app/: build.gradle
app/src/main/java/org/onap/portal/bff/: Application.java
app/src/main/java/org/onap/portalng/bff/: Application.java
app/src/main/resources/: application-access-control.yml  application-development.yml  application-local.yml  application.yml
app/src/test/java/org/onap/portal/bff/: ApiDocsIntegrationTest.java  BaseIntegrationTest.java  HealthCheckIntegrationTest.java  TokenGenerator.java
app/src/test/java/org/onap/portal/bff/actions/: ActionDto.java  ActionFixtures.java  ActionsMocks.java  CreateActionsIntegrationTest.java  GetActionsIntegrationTest.java  ListActionsIntegrationTest.java
app/src/test/java/org/onap/portal/bff/headers/: XRequestIdHeaderTest.java
app/src/test/java/org/onap/portal/bff/idtoken/: IdTokenExchangeFilterFunctionTest.java
app/src/test/java/org/onap/portal/bff/preferences/: CreatePreferencesIntegrationTest.java  GetPreferencesIntegrationTest.java  PreferencesMocks.java  UpdatePreferencesIntegrationTest.java
app/src/test/java/org/onap/portal/bff/roles/: ListRealmRolesIntegrationTest.java  RolesMocks.java
app/src/test/java/org/onap/portal/bff/users/: CreateUserIntegrationTest.java  DeleteUserIntegrationTest.java  GetUserDetailIntegrationTest.java  ListAssignedRolesIntegrationTest.java  ListAvailableRolesIntegrationTest.java  ListUsersIntegrationTest.java  UpdateAssignedRolesIntegrationTest.java  UpdateUserIntegrationTest.java  UpdateUserPasswordIntegrationTest.java
app/src/test/java/org/onap/portal/bff/utils/: SortingChainResolverTest.java  SortingParserTest.java  VersionComparatorTest.java
app/src/test/java/org/onap/portalng/bff/: ApiDocsIntegrationTest.java  BaseIntegrationTest.java  TokenGenerator.java
app/src/test/java/org/onap/portalng/bff/actions/: ActionDto.java  ActionFixtures.java  ActionsMocks.java  (+3 more)
app/src/test/resources/: application-access-control.yml  application-development.yml  application-test.yml  application.yml  logback-spring.xml
app/src/test/resources/preferences/: preferencesProperties.json
development/: .env  docker-compose.yml  requests-code.http  requests-idea.http  requests.http  run.sh
development/config/: onap-realm.json
lib/: build.gradle
openapi/: build.gradle
openapi/client-history/: build.gradle
openapi/client-history/src/: api.yaml
openapi/client-keycloak/: build.gradle
openapi/client-keycloak/src/: api.yaml
openapi/client-portal-history/: build.gradle
openapi/client-portal-history/src/: portal_history_openapi.yaml
openapi/client-portal-keycloak/: build.gradle
openapi/client-portal-prefs/: build.gradle
openapi/client-preferences/: build.gradle
openapi/client-preferences/src/: api.yaml
openapi/server/: build.gradle
openapi/server/src/main/resources/static/: api-docs.html  api.yaml
releases/: 0.0.9-container-release.yaml  0.1.0-container-release.yaml  0.1.1-container-release.yaml  0.1.2-container-release.yaml  0.2.0-container-release.yaml  0.2.1-container-release.yaml  0.3.1.yaml  0.3.2.yaml
src/github2gerrit_python/: __init__.py  cli.py  config.py  core.py  github_api.py  gitutils.py  models.py
tests/: conftest.py  test_cli.py  test_cli_outputs_file.py  test_cli_url_and_dryrun.py  test_config_and_reviewers.py  test_core_config_and_errors.py  test_core_gerrit_backref_comment.py  test_core_integration_fixture_repo.py  test_core_prepare_commits.py  test_ghe_and_gitreview_args.py  test_github_api_helpers.py  test_gitutils_helpers.py  test_url_parser.py
tests/fixtures/: make_repo.py
(+84 files in other folders)
